--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
 
     <section class="top">
-        <img class="top__image" src="/images/home.webp" alt="">
+        <img class="top__image" src="images/home.webp" alt="">
         <div class="container">
             <div class="top__content">
                 <div class="top__text">
